# izpit

./: README.md  myNotebook.ipynb  pyproject.toml
podatki/: data.dvc
podatki/__MACOSX/: ._students.xlsx  ._students_scores.csv
