[tool.poetry]
name = "vaje"
version = "0.1.0"
description = ""
authors = ["buju4e <bojan.petrovski@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
evidently = "^0.4.20"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
dvc = "^3.50.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
